Undo preview-sizer height to fix footer jump error

--- a/SCSS/ITS Theme/_Tables.scss
+++ b/SCSS/ITS Theme/_Tables.scss
@@ -34,10 +34,7 @@ table { border-collapse: collapse; }
     padding: 6px 10px;
 }
 
-.markdown-preview-sizer {
-    min-height: auto !important;
-}
-
+// .markdown-preview-sizer { min-height: auto !important; }
 
 /*Plugin: Advanced Table*/
 .cm-s-obsidian .HyperMD-table-row {
