--- a/obsidian.css
+++ b/obsidian.css
@@ -4184,10 +4184,6 @@ table {
   padding: 6px 10px;
 }
 
-.markdown-preview-sizer {
-  min-height: auto !important;
-}
-
 /*Plugin: Advanced Table*/
 .cm-s-obsidian .HyperMD-table-row {
   font-family: var(--font-monospace);
